# Notions-of-Quantum-Reductions-and-Impossibility-of-Statistical-NIZK

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/crypto/: nizk.rs  snark.rs
src/quantum/: error_correction.rs  noise.rs  state.rs
