[package]
name = "quantum_cryptography"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha3 = "0.10"
curve25519-dalek = "4.1"
merlin = "3.0"
rayon = "1.8"
blake3 = "1.5"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
subtle = "2.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
typenum = "1.17"
generic-array = "0.14"
digest = "0.10"
aes-gcm = "0.10"
constant_time_eq = "0.3"
parking_lot = "0.12"